deploy/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: taskapi
  labels:
    app: taskapi
    environment: production
